[project]
name = "langgraph-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.7",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.9",
    "langgraph>=0.2.53",
    "grandalf>=0.8",
    "websockets>=14.1",
    "python-ulid>=3.0.0",
]
